# rss-summary

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  feeds.yml  prompt.j2  prompt.txt  pyproject.toml  rss_summarizer.py
.github/workflows/: docker-build.yaml
rss/: feed.xml
