[project]
name = "rss-summary"
version = "0.1.0"
description = "Summarize RSS feeds using Claude AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm",
    "llm-anthropic",
    "feedparser",
    "python-dateutil",
    "PyYAML",
    "feedgen",
    "Jinja2", # Add Jinja2 dependency
]
